Fixing text sizing on smaller screen sizes

--- a/src/app/components/dynamic-table/dynamic-table.component.scss
+++ b/src/app/components/dynamic-table/dynamic-table.component.scss
@@ -1,37 +1,42 @@
 @import "src/themes.scss";
 
 .dynamicTable-tile {
-    display: flex;
-    justify-content:space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .dynamicTable-include {
-    background-color: $success;
+  background-color: $success;
 }
 
 .dynamicTable-exclude {
-    background-color: $warn;
+  background-color: $warn;
 }
 
 .dynamicTable-neutral {
-    background-color: $neutral;
+  background-color: $neutral;
 }
 
-.dynamicTable-icon {
-    width:100%;
-    height: 100%;
+.dynamicTable-field {
+  width: 100%;
+  height: 100%;
 
-    display: flex;
-    justify-content:space-between;
-    
+  position: relative;
+  font-size: 1vw;
 }
 
 .dynamicTable-title {
-    width: 100%;
-    align-self: center;
-    text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .hidden {
-   visibility: hidden;
+  visibility: hidden;
+}
+
+.dynamicTable-icon {
+  position: absolute;
+  right: 0;
 }
